[tool.poetry]
name = "ggrf-api-demo"
version = "0.1.0"
description = "Demonstrate calling various RA GGRF APIs."
authors = ["Darren Vengroff <darren@rewiringamerica.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.3.2"
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.10.0"}
flake8 = "^7.1.1"
ruff = "^0.8.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
nbmake = "^1.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
